# stack2d

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  lint.yml  tests.yml
examples/basic_usage/: MoS2.xyz  graphene.xyz  hBN.xyz  options.yaml  run.sh
src/stack2d/: __init__.py  __main__.py  generator.py
src/stack2d/share/: schema-base.json
src/stack2d/utils/: config.py
tests/: __init__.py  test_cli.py  test_generator.py
tests/resources/: MoS2.xyz  graphene.xyz  hBN.xyz  options.yaml
